--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,12 @@ server.port =8082
 spring.main.banner-mode=OFF
 
 #AJ PROD
-database.url = jdbc:oracle:thin:@10.187.28.28:1521:JLPRO
-database.driver_class_name=oracle.jdbc.OracleDriver
+spring.datasource.url = jdbc:oracle:thin:@10.187.28.28:1521:JLPRO
+spring.datasource.username = L290275
+spring.datasource.password = Password_0301
+spring.datasource.driverClassName=oracle.jdbc.OracleDriver
 spring.jpa.database-platform=org.hibernate.dialect.Oracle8iDialect
+
+project.local.root_dir = out/output/
+
+#Add external property file where they could switch from other profiles
